# orin

./: CMakeLists.txt  README.md  main.c
dependencies/: glad.c
dependencies/include/: dynarray.h
dependencies/include/glad/: glad.h
python/: README.md  orin.dylib  orin.py
python/binaries/: liborin.dylib
src/: orin.c  orin.h  orinmath.c  orinmath.h
src/internal/: display.c  display.h  graphics.c  graphics.h  input.c  input.h  model.c  model.h  shader.c  shader.h  texture.c  texture.h
